@@ -1,5 +1,5 @@
 /* Conversion functions for versioning information.
-   Copyright (C) 2006, 2007 Red Hat, Inc.
+   Copyright (C) 2006-2011 Red Hat, Inc.
    This file is part of Red Hat elfutils.
    Written by Ulrich Drepper <drepper@redhat.com>, 2006.
 
@@ -89,7 +89,9 @@ elf_cvt_gnuhash (void *dest, const void *src, size_t len, int encode)
   dest32 = (Elf32_Word *) &dest64[bitmask_words];
   while (len >= 4)
     {
-      *dest32++ = bswap_32 (*src32++);
+      *dest32 = bswap_32 (*src32);
+      ++dest32;
+      ++src32;
       len -= 4;
     }
 }
